--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-
-<%= link_to "About Me", about_path %>
+<div class="container">
+  <h1>Joshua Hawks Blog</h1>
+  <p>Read more about me or check out my blog</p>
+</div>
